# krypton-ml

./: .gitignore  AGENTS.md  README.md  config.yaml  pyproject.toml  scripts.py
.github/workflows/: publish.yml
examples/: Dockerfile  config.yaml  docker-compose.yaml
examples/custom/: custom_model.py
examples/langchain_example/: app.py  chat.py  completion.py
krypton_ml/core/models/: registry.py
krypton_ml/core/registry/: model_registry.py
krypton_ml/core/webserver/: model_endpoints.py
tests/: requests.md
tests/integrations/: test_integration.py
website/: docusaurus.config.js  package-lock.json  package.json
website/blog/: 2024-10-03-baby-steps.md  2024-12-08-huggingface-support.md
website/docs/config/: _category_.json  config-parameters.md
website/docs/examples/: 1-langchain.md  2-custom-model.md  3-hugging-face.md  _category_.json
website/docs/getting-started/: _category_.json
website/docs/intro/: 1_installing.md  _category_.json  docker-example.md  installing.md
website/src/components/HomepageFeatures/: index.js
website/src/css/: custom.css
website/src/pages/: index.js
