[tool.poetry]
name = "krypton-ml"
version = "0.1.0"
description = ""
authors = ["Varun"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
fastapi = {extras = ["standard"], version = "^0.115.0"}
typer = "^0.12.5"
pydantic = "^2.9.2"
pydantic-yaml = "^1.3.0"


[tool.poetry.group.external_modules.dependencies]
langchain = "^0.3.1"
langchain-ollama = "^0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
krypton = "krypton_ml.main:app"