[tool.poetry]
name = "krypton-ml"
version = "0.1.5"
description = "A ML model serving library"
authors = ["Varun Kruthiventi"]
readme = "README.md"
repository = "https://github.com/kryptonhq/krypton-ml"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
fastapi = {extras = ["standard"], version = "^0.115.0"}
typer = "^0.12.5"
pydantic = "^2.9.2"
pydantic-yaml = "^1.3.0"
langchain = "^0.3.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
krypton = "krypton_ml.main:app"
format = "ruff format ."
lint = "ruff check ."
fix = "ruff check --fix ."

[tool.ruff]
# Enable pycodestyle ('E'), Pyflakes ('F'), and isort ('I') rules
select = ["E", "F", "I"]
ignore = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 96

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.9
target-version = "py39"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10